--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,5 +7,6 @@
     "cmake.environment": {
         "VCPKG_ROOT": "${env:HOME}/vcpkg",
     },
-    "cmake.sourceDirectory": "${workspaceFolder}"
+    "cmake.sourceDirectory": "${workspaceFolder}",
+    "python.pythonPath": "/usr/bin/python3"
 }
