Cosim with capnp pointers/generics (and build improvements) (#74)
* Compiling on new box

* Updating infra stuff

* Capnp loopback through RTL is working!

* "Right" way to model endpoint message types

Doesn't make a difference in practice in C++ server or pycapnp

* Ensure that response from sim is valid size

* Wait for the specified amount of time

* Bumping timeout to 10 mins

* Making this work in docker

* Don't re-build on run

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,4 +4,9 @@
     ],
     "files.eol": "\n",
     "C_Cpp.default.configurationProvider": "vector-of-bool.cmake-tools",
+    "cmake.environment": {
+        "VCPKG_ROOT": "${env:HOME}/vcpkg",
+    },
+    "cmake.sourceDirectory": "${workspaceFolder}",
+    "python.pythonPath": "/usr/bin/python3"
 }
