--- a/src/cosim/CMakeLists.txt
+++ b/src/cosim/CMakeLists.txt
@@ -1,4 +1,4 @@
 
-include_directories(include)
+set(COSIM_INCLUDE ${CMAKE_CURRENT_LIST_DIR}/include)
 add_subdirectory(MtiPliStub)
 add_subdirectory(cosim_dpi_server)
