--- a/src/cosim/MtiPliStub/CMakeLists.txt
+++ b/src/cosim/MtiPliStub/CMakeLists.txt
@@ -1,4 +1,6 @@
 
+set(HEADERS ${CAPNP_HDRS} ${COSIM_INCLUDE}/svdpi.h)
 set(SOURCES ${CAPNP_SRCS} DummySvDpi.cpp )
-add_library(MtiPli SHARED ${SOURCES})
+add_library(MtiPli SHARED ${HEADERS} ${SOURCES})
+target_include_directories(MtiPli PRIVATE ${COSIM_INCLUDE})
 
