--- a/.github/workflows/esi_ci.yml
+++ b/.github/workflows/esi_ci.yml
@@ -11,27 +11,16 @@ jobs:
     name: Build and test on Ubuntu
     runs-on: ubuntu-latest
     container:
-      image: teqdruid/esi:devenv-0.4
+      image: teqdruid/esi:devenv-0.5
     steps:
     - uses: actions/checkout@v2
-    - name: Build with dotnet
-      run: dotnet build --configuration Release
-      working-directory: src/core
-    - name: Core Unit Tests
-      run: dotnet test
-      working-directory: src/core
-    - name: Core integration tests
-      run: pytest -m nolic src/core
-    - name: Dotnet publish linux
-      run: dotnet publish -o bin/esi_core_linux -r linux-x64
-      working-directory: src/core
-    - run: tar -zcvf esi_core_linux.tar.gz esi_core_linux
-      working-directory: src/core/bin
-    - name: Upload ESI Core Linux artifact
-      uses: actions/upload-artifact@v1
-      with:
-        name: esi_core_linux
-        path: src/core/bin/esi_core_linux.tar.gz
+    - name: Cosim integration tests
+      run: pytest -m nolic src/cosim
+    # - name: Upload ESI Core Linux artifact
+    #   uses: actions/upload-artifact@v1
+    #   with:
+    #     name: esi_core_linux
+    #     path: src/core/bin/esi_core_linux.tar.gz
   linux_docker_run:
     name: Test on bare Ubuntu image
     needs: linux_build
