Adding msft headers to source files

--- a/src/cosim/dummy_simulator/CMakeLists.txt
+++ b/src/cosim/dummy_simulator/CMakeLists.txt
@@ -1,3 +1,6 @@
+# Copyright (c) Microsoft Corporation.
+# Licensed under the MIT License.
+
 
 set(HEADERS ${CAPNP_HDRS} )
 set(SOURCES ${CAPNP_SRCS} dummy.cpp)
