--- a/src/cosim/CMakeLists.txt
+++ b/src/cosim/CMakeLists.txt
@@ -1,3 +1,6 @@
+# Copyright (c) Microsoft Corporation.
+# Licensed under the MIT License.
+
 
 set(COSIM_INCLUDE ${CMAKE_CURRENT_LIST_DIR}/include)
 add_subdirectory(MtiPliStub)
