--- a/src/include/mlir/CMakeLists.txt
+++ b/src/include/mlir/CMakeLists.txt
@@ -1,6 +1,4 @@
 # Copyright (c) Microsoft Corporation.
 # Licensed under the MIT License.
 
-add_subdirectory(include)
-add_subdirectory(lib)
-add_subdirectory(cosim)
+add_subdirectory(Dialect)
