--- a/src/include/Dialects/Esi/CMakeLists.txt
+++ b/src/include/Dialects/Esi/CMakeLists.txt
@@ -4,7 +4,4 @@
 add_mlir_dialect(EsiOps esi)
 add_mlir_doc(EsiOps -gen-op-doc esi Dialects/)
 
-# set(LLVM_TARGET_DEFINITIONS EsiOps.td)
-# mlir_tablegen(EsiOps.h.inc )
-# mlir_tablegen(EsiOps.cpp.inc )
-# add_public_tablegen_target(MLIREsiIncGen)
+set(EsiDialectHeaders EsiOps.hpp EsiOpsBasicTypes.hpp)
