--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,6 @@
     "files.eol": "\n",
     "C_Cpp.default.configurationProvider": "vector-of-bool.cmake-tools",
     "cmake.sourceDirectory": "${workspaceFolder}",
-    "python.pythonPath": "/usr/bin/python3"
+    "python.pythonPath": "/usr/bin/python3",
+    "cmake.generator": "Unix Makefiles"
 }
