--- a/.github/workflows/esi_ci.yml
+++ b/.github/workflows/esi_ci.yml
@@ -16,6 +16,10 @@ jobs:
     - uses: actions/checkout@v2
     - name: Cosim integration tests
       run: pytest -m nolic src/cosim
+    - name: MLIR toolchain build
+      run: cmake -S. -Bbuild && cmake --build build
+    - name: MLIR toolchain tests
+      run: cmake --build build --target check-esic
     # - name: Upload ESI Core Linux artifact
     #   uses: actions/upload-artifact@v1
     #   with:
