--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,7 @@
 # Copyright (c) Microsoft Corporation.
 # Licensed under the MIT License.
 
+add_subdirectory(include)
+add_subdirectory(lib)
+add_subdirectory(mlir_tools)
 add_subdirectory(cosim)
