Setting up build for capnp conversion
... This took FAR, FAR longer than it should have

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -20,6 +20,18 @@
             ],
         },
         {
+            "name": "esi-capnp",
+            "type": "cppdbg",
+            "request": "launch",
+            "program": "${workspaceFolder}/build/bin/esi-capnp",
+            "args": ["dotnet_src/core/tests/stress_tests/stress1_synth.capnp"],
+            "stopAtEntry": true,
+            "cwd": "${workspaceFolder}",
+            "environment": [
+
+            ],
+        },
+        {
             "name": "tests/mlir/esic",
             "type": "cppdbg",
             "request": "launch",
