--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,8 @@ cmake_minimum_required(VERSION 3.0.0)
 
 set(CMAKE_BUILD_TYPE Debug)
 
+set(MLIR_DIR mlir/build/lib/cmake/mlir/)
+
 # Pick up vcpkg toolchain from environment variable
 if(DEFINED ENV{VCPKG_ROOT} AND NOT DEFINED CMAKE_TOOLCHAIN_FILE)
   message( STATUS "Found VCPKG at $ENV{VCPKG_ROOT}")
