Adding some rought compilation notes

--- a/src/lib/capnp/CMakeLists.txt
+++ b/src/lib/capnp/CMakeLists.txt
@@ -10,6 +10,6 @@ add_mlir_library(CapnpEsi SHARED ${HEADERS} ${SOURCES})
 target_link_libraries(CapnpEsi PUBLIC
     CapnProto::kj
     CapnProto::capnp
-    # CapnProto::capnpc
+    CapnProto::capnpc
     MLIREsi
     )
