--- a/src/include/Dialects/Esi/CMakeLists.txt
+++ b/src/include/Dialects/Esi/CMakeLists.txt
@@ -1,7 +1,7 @@
 # Copyright (c) Microsoft Corporation.
 # Licensed under the MIT License.
 
-add_mlir_dialect(EsiOps esi)
-add_mlir_doc(EsiOps -gen-op-doc esi Dialects/)
+add_mlir_dialect(EsiDialect esi)
+add_mlir_doc(EsiDialect -gen-op-doc esi Dialects/)
 
 set(EsiDialectHeaders EsiDialect.hpp EsiOps.hpp EsiTypes.hpp)
