Adapting to valgrind, which helped track down a memory bug
Gotta be careful w/ StringRefs!

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -27,6 +27,8 @@
             "request": "launch",
             "program": "${workspaceFolder}/build/bin/esi-capnp",
             "args": [
+                "-I",
+                "~/esi/build/bin/",
                 "tests/capnp/stress_tests/stress1_synth.capnp"
             ],
             "stopAtEntry": true,
